--- a/pages/post.module.css
+++ b/pages/post.module.css
@@ -1,8 +1,28 @@
 .container {
+  font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
   padding: 0 20px;
   max-width: 700px;
   margin: 0 auto;
   line-height: 1.5;
+}
+
+.articleTitle{
+  text-decoration: underline;
+}
+
+.codeContainer {
+  background-color: #000;
+  color: aliceblue;
+}
+
+.wrapper {
+  font-family: 'Arial', sans-serif;
+  background-color: #e9e6d6;
+  padding: 0;
+  width: 100vw;
+  min-height: 100vh; /* Ensures the background covers the viewport height but allows expansion */
+  display: flex;
+  flex-direction: column;
 }
 
 .container h1 {
