--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -3,43 +3,79 @@
   background-color: #e9e6d6;
   padding: 0;
   width: 100vw;
-  min-height: 100vh; /* Ensures the background covers the viewport height but allows expansion */
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-}
-.profileImage {
-  width: 50px;          /* 画像の幅 */
-  height: 50px;         /* 画像の高さ */
-  border-radius: 50%;   /* 丸い画像にする */
-  object-fit: cover;    /* 画像が枠に収まるように切り取る */
-  border: 2px solid #333; /* 画像に枠線を追加 */
+  opacity: 0; 
+  animation: slideIn 1s forwards;
 }
 
+@keyframes slideIn {
+  0% {
+    transform: translateY(20px); 
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.profileContainer {
+  width: 60vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.snsContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  font-size: 3.2rem;
+  color: #000;
+  gap: 5px;
+}
+
+.snsIcon {
+  color: #000;
+}
+
+.profileImage {
+  width: 50px;
+  height: 50px;
+  border-radius: 20px;
+  object-fit: cover;
+  border: 2px solid #333;
+}
 
 .nameBlock {
   display: flex;
-  align-items: center;  /* 垂直方向に中央揃え */
-  gap: 15px;   
+  align-items: center;
+  gap: 10px;
 }
 
-.userName{
-  font-weight: bold;
-  font-size: 1.7rem;
+.userName {
+  font-family: "Oswald";
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 3rem;
 }
-
 
 .mainContainer {
-  padding: 20px;
-  max-width: 900px;
-  margin: 0 auto;
+  max-width: 90vw;
 }
 
 .header {
+  background-image: url("../public/image/fujisawa.jpg");
+  height: 100vh;
+  background-size: cover;
+  background-position: center 67%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding: 40px 0;
 }
 
 .logoWrapper {
@@ -55,24 +91,79 @@
   color: #000;
 }
 
+.titleContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+}
+
 .title {
-  font-size: 2.5rem;
+  font-family: "TypeFesse";
+  margin-bottom: 0;
+  font-size: 11rem;
   font-weight: bold;
   color: #000;
 }
 
 .subTitle {
-  font-size: 1.2rem;
+  font-family: "Sawarabi Gothic", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2rem;
   color: #000;
   opacity: 0.8;
 }
 
 .postsSection {
+  width: 100vw;
   margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+}
+
+.postContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+@media screen and (max-width: 768px) {
+
+  .profileContainer {
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+  }
+
+  .snsContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    font-size: 3.2rem;
+    color: #000;
+    gap: 3px;
+  }
+
+  .postContainer {
+    margin: 0 10vw;
+  }
+
+.title {
+  font-size: 8rem;
+}
+
+.subTitle {
+  font-size: 1.5rem;
+  color: #000;}
 }
 
 .heading {
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-transform: uppercase;
   margin-bottom: 30px;
   color: #000;
@@ -90,6 +181,14 @@
   padding-bottom: 20px;
 }
 
+.postTitleContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;  
+  justify-content: space-between;
+}
+
 .postTitle {
   font-size: 1.8rem;
   font-weight: 600;
@@ -102,9 +201,22 @@
   color: inherit;
 }
 
-.postDescription {
+.postGenre{
+  display: inline-block;
+  margin: 0;
+  color: #676666;
+  border: 1px solid #676666;
+  padding: 5px 10px;
+  border-radius: 3px;
+}
+
+.postAuthor {
+  color: #676666;
+}
+
+.postDate {
   font-size: 1rem;
-  color: #000;
+  color: #676666;
   margin-bottom: 12px;
 }
 
