--- a/pages/post.module.css
+++ b/pages/post.module.css
@@ -20,7 +20,7 @@
   background-color: #e9e6d6;
   padding: 0vw;
   width: 100vw;
-  min-height: 100vh; /* Ensures the background covers the viewport height but allows expansion */
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
